errors.txt
cargo :     Checking lune-std-ffi 
v0.3.4 (C:\Lune Custom 
Build\crates\lune-std-ffi)
No linha:1 caractere:1
+ cargo check -p lune-std-ffi 2>&1 | 
Out-File -FilePath errors.txt -Enc ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (    Checking lu...s\lune-st  
  d-ffi):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
error[E0583]: file not found for 
module `library`
  --> 
crates\lune-std-ffi\src\lib.rs:27:1
   |
27 | mod library;
   | ^^^^^^^^^^^^
   |
   = help: to create the module 
`library`, create file 
"crates\lune-std-ffi\src\library.rs" 
or "crates\lune-std-ffi\src\library\mod
.rs"
   = note: if there is a `mod library` 
elsewhere in the crate already, import 
it with `use crate::...` instead

For more information about this error, 
try `rustc --explain E0583`.
error: could not compile 
`lune-std-ffi` (lib) due to 1 previous 
error
